--- a/singlenews.html
+++ b/singlenews.html
@@ -10,53 +10,54 @@
     <link rel="stylesheet" href="./css/singlenews.css">
 </head>
 <body>
-    <section class="px-2 py-2 pt-3 ">
-        <div class="container">
-              <div class="row">
-                <div class="col-4">
-                  <h1 class="med bc d-sm-none d-none d-md-none d-lg-block">MED<span class="medpan">DICAL</span></h1>
-                </div>
-                <div class="col-12 col-lg-8">
-                  <div class="row">
-                    <div class="col-lg-4 col-12 col-md-4">
-                      <div class="row" >
-                        <div class="col-lg-3 col-3">
-                            <div class=""><img class="ms-3 mt-2 " src="./img/call.svg"  alt=""></div>
-                      </div>
-                        <div class="col-9 col-lg-9">
-                          <h5 class="fpp col-12">EMERGENCY</h5>
-                          <p class="fp text-primary fw-bold st-n1">(237) 681-812-255</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-12 col-md-4">
-                      <div class="row">
-                        <div class="col-3">
-                            <div class="col-6"><img class="ms-3 mt-2" src="./img/tim-cir.svg"  alt=""></div>
-                        </div>
-                        <div class="col-9">
-                          <h5 class="col-12 fpp">WORK HOUR</h5>
-                          <p class="fp text-primary fw-bold">09:00 -20:00 Everyday</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-12 col-md-4">
-                      <div class="row">
-                        <div class="col-3">
-                          <div class="row">
-                            <div class="col-6"><img class="ms-3 mt-2" src="./img/loc1.svg"  alt=""></div>
-                          </div>
-                        </div>
-                        <div class="col-9">
-                          <h5 class="col-12 fpp">LOCATION</h5>
-                          <p class="fp text-primary fw-bold">0123 Some Place</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>  
-        </div>
+  <section>
+    <section class="px-2 py-2 pt-3">
+ <div class="container">
+       <div class="row">
+         <div class="col-4">
+           <h1 class="med bc d-sm-none d-none d-md-none d-lg-block">MED<span class="medpan">DICAL</span></h1>
+         </div>
+         <div class="col-12 col-lg-8">
+           <div class="row">
+             <div class="col-lg-4 col-12 col-md-4">
+               <div class="row" >
+                 <div class="col-lg-3 col-3">
+                     <div class=""><img class="ms-3 mt-2 " src="./img/call.svg"  alt=""></div>
+               </div>
+                 <div class="col-9 col-lg-9">
+                   <h5 class="fpp col-12">EMERGENCY</h5>
+                   <p class="fp text-primary fw-bold st-n1">(237) 681-812-255</p>
+                 </div>
+               </div>
+             </div>
+             <div class="col-lg-4 col-12 col-md-4">
+               <div class="row">
+                 <div class="col-3">
+                     <div class="col-6"><img class="ms-3 mt-2" src="./img/tim-cir.svg"  alt=""></div>
+                 </div>
+                 <div class="col-9">
+                   <h5 class="col-12 fpp">WORK HOUR</h5>
+                   <p class="fp text-primary fw-bold">09:00 -20:00 Everyday</p>
+                 </div>
+               </div>
+             </div>
+             <div class="col-lg-4 col-12 col-md-4">
+               <div class="row">
+                 <div class="col-3">
+                   <div class="row">
+                     <div class="col-6"><img class="ms-3 mt-2" src="./img/loc1.svg"  alt=""></div>
+                   </div>
+                 </div>
+                 <div class="col-9">
+                   <h5 class="col-12 fpp">LOCATION</h5>
+                   <p class="fp text-primary fw-bold">0123 Some Place</p>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>  
+ </div>
       </section class="container">
           <nav class="navbar px-5 py-3 navbar-expand-lg navbar-light bg-primary ">
               <div class="container-fluid">
@@ -273,53 +274,64 @@
                 </div>
             </section>
 
-  <footer class=" text-white pt-5 mt-5 px-3 bfw-bold border-bottom border-5 border-white">
-        <div class="container">
-            <div class="row ">
-              <div class="col-lg-3  mt-1">
-                  <h2 class="med cc">MEDDICAL</h2>
-                  <p class="pb-4 cc">Leading the Way in Medical Execellence, Trusted Care.</p>
-              </div>
-              <div class="col-lg-2 col-md-3 mt-1">
-                  <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p>Important links</p></a>
-                  <a href="appointment.html" class="text-decoration-none text-white cc"> Appointments </a>
-                  <a href="doctors.html" class="text-decoration-none text-white cc"><br>Doctors </a>
-                  <a href="services.html" class="text-decoration-none text-white cc"><br>Services </a>
-                  <a href="about.html" class="text-decoration-none text-white cc"><br>About Us</a> 
-              </div>
-              <div class="col-lg-3 col-md-4  mt-1">
-                  <a href="contact_us.html"  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Contacts Us</p></a>
-                  <p class="mt-3 cc">Call: (237) 681-812-255 
-                  <br>Email: fildineesoe@gmail.com 
-                  <br>Address: 0123 Some place Some country
-                  <br></p> 
-              </div>
-              <div class="col-lg-4 col-md-5  mt-1">
-                <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Newsletter</p></a>
-                <form action="/action_page.php">
-                  <input type="email" class="form-control fornn" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Email address">
-                  <img src="./img/letter.svg"><div id="emailHelp" class="form-text"></div>
-              </form>
-              </div>
-              <div class="row">
-                  <div class="bru ms-3 border-bottom border-2 border-white justify-content-center">
-              </div>
-                <div class="row just pb-4">
-                  <div class="col-lg-8 col-md-8 col-12 pt-2 col justify-content-end">
-                    <p class="pt-5 cc">&copy; 2021 Hospital’s name All Rights Reserved by PNTEC-LTD</p>
-                  </div>
-                  <div class="col-lg-4 col-md-4 col-12 pt-5 men">
-                    <div class="row">
-                      <img src="./img/linkinin.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
-                      <img src="./img/fb.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
-                      <img src="./img/insta.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
-                    </div>
-                  </div>
-                </div>
-        </div>   
-  </footer>
-
-
-<script src="./js/bootstrap.min.js"></script>
-</body>
-</html>
+            <footer class=" text-white pt-5 mt-5 px-3 bfw-bold border-bottom border-5 border-white">
+              <div class="container">
+                  <div class="row ">
+                      <div class="col-lg-3  mt-1">
+                          <h2 class="med cc">MEDDICAL</h2>
+                          <p class="pb-4 cc">Leading the Way in Medical Execellence, Trusted Care.</p>
+                      </div>
+                      <div class="col-lg-2 col-md-3 mt-1">
+                          <a href="" style="font-size: 18px; " class="fw-bold text-decoration-none text-white ">
+                              <p>Important links</p>
+                          </a>
+                          <a href="appointment.html" class="text-decoration-none text-white cc"> Appointments </a>
+                          <a href="doctors.html" class="text-decoration-none text-white cc">
+                              <br>Doctors </a>
+                          <a href="services.html" class="text-decoration-none text-white cc">
+                              <br>Services </a>
+                          <a href="about.html" class="text-decoration-none text-white cc">
+                              <br>About Us</a>
+                      </div>
+                      <div class="col-lg-3 col-md-4  mt-1">
+                          <a href="contact_us.html" style="font-size: 18px; " class="fw-bold text-decoration-none text-white ">
+                              <p>Contacts Us</p>
+                          </a>
+                          <p class="mt-3 cc">Call: (237) 681-812-255
+                              <br>Email: fildineesoe@gmail.com
+                              <br>Address: 0123 Some place Some country
+                              <br>
+                          </p>
+                      </div>
+                      <div class="col-lg-4 col-md-5  mt-1">
+                          <a href="" style="font-size: 18px; " class="fw-bold text-decoration-none text-white ">
+                              <p>Newsletter</p>
+                          </a>
+                          <form action="/action_page.php">
+                              <input type="email" class="form-control fornn" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Email address">
+                              <img src="./img/letter.svg">
+                              <div id="emailHelp" class="form-text"></div>
+                          </form>
+                      </div>
+                      <div class="row">
+                          <div class="bru ms-3 border-bottom border-2 border-white justify-content-center">
+                          </div>
+                          <div class="row just pb-4">
+                              <div class="col-lg-8 col-md-8 col-12 pt-2 col justify-content-end">
+                                  <p class="pt-5 cc">&copy; 2021 Hospital’s name All Rights Reserved by PNTEC-LTD</p>
+                              </div>
+                              <div class="col-lg-4 col-md-4 col-12 pt-5 men">
+                                  <div class="row">
+                                      <img src="./img/linkinin.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
+                                      <img src="./img/fb.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
+                                      <img src="./img/insta.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+          </footer>
+      </section>
+      <script src="./js/bootstrap.min.js"></script>
+  </body>
+  
+  </html>
