--- a/services.html
+++ b/services.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/bootstrap.min.css" /> 
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/services.css" />
-        <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/navbar.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -32,7 +33,7 @@
                 <div class="col-lg-4 col-12 col-md-4">
                   <div class="row" >
                     <div class="col-lg-3 col-3">
-                        <div class=""><img class="ms-3 mt-2 " src="./img/call.svg" style="width:"" alt=""></div>
+                        <div class=""><img class="ms-3 mt-2 " src="./img/call.svg"  alt=""></div>
                   </div>
                     <div class="col-9 col-lg-9">
                       <h5 class="fpp col-12">EMERGENCY</h5>
@@ -43,7 +44,7 @@
                 <div class="col-lg-4 col-12 col-md-4">
                   <div class="row">
                     <div class="col-3">
-                        <div class="col-6"><img class="ms-3 mt-2" src="./img/tim-cir.svg" style="" alt=""></div>
+                        <div class="col-6"><img class="ms-3 mt-2" src="./img/tim-cir.svg"  alt=""></div>
                     </div>
                     <div class="col-9">
                       <h5 class="col-12 fpp">WORK HOUR</h5>
@@ -55,7 +56,7 @@
                   <div class="row">
                     <div class="col-3">
                       <div class="row">
-                        <div class="col-6"><img class="ms-3 mt-2" src="./img/loc1.svg" style="" alt=""></div>
+                        <div class="col-6"><img class="ms-3 mt-2" src="./img/loc1.svg"  alt=""></div>
                       </div>
                     </div>
                     <div class="col-9">
@@ -71,7 +72,7 @@
   </section class="container">
       <nav class="navbar px-5 py-3 navbar-expand-lg navbar-light bg-primary">
           <div class="container-fluid">
-            <a class="navbar-brand text-white" href="/"><p id="hom">Home</p></a>
+            <a class="navbar-brand text-white" href="index.html"><p id="hom">Home</p></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -349,4 +350,3 @@
     <script src="./js/bootstrap.min.js"></script>
   </body>
 </html>
-
