--- a/news.html
+++ b/news.html
@@ -27,7 +27,7 @@
                         <div class="col-lg-4 col-12 col-md-4">
                             <div class="row">
                                 <div class="col-lg-3 col-3">
-                                    <div class=""><img class="ms-3 mt-2 " src="./img/call.svg"  alt=""></div>
+                                    <div class=""><img class="ms-3 mt-2 " src="./img/call.svg" style="width:"" alt=""></div>
                           </div>
                             <div class=" col-9 col-lg-9">
                                         <h5 class="fpp col-12">EMERGENCY</h5>
@@ -38,7 +38,7 @@
                             <div class="col-lg-4 col-12 col-md-4">
                                 <div class="row">
                                     <div class="col-3">
-                                        <div class="col-6"><img class="ms-3 mt-2" src="./img/tim-cir.svg" 
+                                        <div class="col-6 nav-icon"><img class="ms-3 mt-2" src="./img/tim-cir.svg" style=""
                                                 alt=""></div>
                                     </div>
                                     <div class="col-9">
@@ -51,7 +51,7 @@
                                 <div class="row">
                                     <div class="col-3">
                                         <div class="row">
-                                            <div class="col-6"><img class="ms-3 mt-2" src="./img/loc1.svg" 
+                                            <div class="col-6 nav-icon"><img class="ms-3 mt-2" src="./img/loc1.svg" style=""
                                                     alt=""></div>
                                         </div>
                                     </div>
@@ -68,7 +68,7 @@
     </section class="container">
     <nav class="navbar px-5 py-3 navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="index.html">
+            <a class="navbar-brand text-white" href="#">
                 <p id="hom">Home</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -79,22 +79,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="about.html">
+                        <a class="nav-link active text-white" aria-current="page" href="#">
                             <p id="nap">About us</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" href="services.html">
+                        <a class="nav-link active text-white" href="#">
                             <p id="nap">Services</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" href="doctors.html">
+                        <a class="nav-link active text-white" href="#">
                             <p id="nap">Doctors</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-white" href="news.html">
+                        <a class="nav-link active text-white" href="#">
                             <p id="nap">News</p>
                         </a>
                     </li>
@@ -107,7 +107,7 @@
                 <form class="">
                     <div class="flex">
 
-                        <a href="appointment.html"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
+                        <a href="#"><img src="./img/search.svg" alt="" class="justify-content-center pe-2"></a>
                         <button class=" py-2 px-3 text-white btnn fw-bold nav-icon" type="submit">Appointment</button>
                     </div>
                 </form>
@@ -192,7 +192,7 @@
                     ornare. Quisque placerat scelerisque tortor ornare ornare Convallis felis vitae tortor augue. Velit
                     nascetur proin massa in. Consequat faucibus porttitor enim et....
                 </p>
-                <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
+                <a href="#" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
             </div>
             <!-- end of blog 1  -->
@@ -252,7 +252,7 @@
                     ornare. Quisque placerat scelerisque tortor ornare ornare Convallis felis vitae tortor augue. Velit
                     nascetur proin massa in. Consequat faucibus porttitor enim et....
                 </p>
-                <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
+                <a href="#" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
 
             </div>
@@ -314,7 +314,7 @@
                     nascetur proin massa in. Consequat faucibus porttitor enim et....
                 </p>
 
-                <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
+                <a href="#" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
 
             </div>
@@ -376,7 +376,7 @@
                     ornare. Quisque placerat scelerisque tortor ornare ornare Convallis felis vitae tortor augue. Velit
                     nascetur proin massa in. Consequat faucibus porttitor enim et....
                 </p>
-                <a href="singlenews.html" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
+                <a href="#" class="btn">Read More <img src="./img/arrow.png" alt="" class="arrow"></a>
 
 
             </div>
@@ -727,53 +727,43 @@
     <footer class=" text-white pt-5 mt-5 px-3 bfw-bold border-bottom border-5 border-white">
         <div class="container">
             <div class="row ">
-                <div class="col-lg-3  mt-1">
-                    <h2 class="med cc">MEDDICAL</h2>
-                    <p class="pb-4 cc">Leading the Way in Medical Execellence, Trusted Care.</p>
-                </div>
-                <div class="col-lg-2 col-md-3 mt-1">
-                    <a href="" style="font-size: 18px; " class="fw-bold text-decoration-none text-white ">
-                        <p>Important links</p>
-                    </a>
-                    <a href="appointment.html" class="text-decoration-none text-white cc"> Appointments </a>
-                    <a href="doctors.html" class="text-decoration-none text-white cc"><br>Doctors </a>
-                    <a href="services.html" class="text-decoration-none text-white cc"><br>Services </a>
-                    <a href="about.html" class="text-decoration-none text-white cc"><br>About Us</a>
-                </div>
-                <div class="col-lg-3 col-md-4  mt-1">
-                    <a href="contact_us.html" style="font-size: 18px; " class="fw-bold text-decoration-none text-white ">
-                        <p>Contacts Us</p>
-                    </a>
-                    <p class="mt-3 cc">Call: (237) 681-812-255
-                        <br>Email: fildineesoe@gmail.com
-                        <br>Address: 0123 Some place Some country
-                        <br></p>
-                </div>
-                <div class="col-lg-4 col-md-5  mt-1">
-                    <a href="" style="font-size: 18px; " class="fw-bold text-decoration-none text-white ">
-                        <p>Newsletter</p>
-                    </a>
-                    <form action="/action_page.php">
-                        <input type="email" class="form-control fornn" id="exampleInputEmail1"
-                            aria-describedby="emailHelp" placeholder="Enter Your Email address">
-                        <img src="./img/letter.svg">
-                        <div id="emailHelp" class="form-text"></div>
-                    </form>
-                </div>
-                <div class="row">
-                    <div class="bru ms-3 border-bottom border-2 border-white justify-content-center">
-                    </div>
-                    <div class="row just pb-4">
-                        <div class="col-lg-8 col-md-8 col-12 pt-2 col justify-content-end">
-                            <p class="pt-5 cc">&copy; 2021 Hospital’s name All Rights Reserved by PNTEC-LTD</p>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-12 pt-5 men">
-                            <div class="row">
-                                <img src="./img/linkinin.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
-                                <img src="./img/fb.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
-                                <img src="./img/insta.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
-                            </div>
-                        </div>
+              <div class="col-lg-3  mt-1">
+                  <h2 class="med cc">MEDDICAL</h2>
+                  <p class="pb-4 cc">Leading the Way in Medical Execellence, Trusted Care.</p>
+              </div>
+              <div class="col-lg-2 col-md-3 mt-1">
+                  <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p>Important links</p></a>
+                  <a href="" class="text-decoration-none text-white cc"> Appointments </a>
+                  <a href="" class="text-decoration-none text-white cc"><br>Doctors </a>
+                  <a href="" class="text-decoration-none text-white cc"><br>Services </a>
+                  <a href="" class="text-decoration-none text-white cc"><br>About Us</a> 
+              </div>
+              <div class="col-lg-3 col-md-4  mt-1">
+                  <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Contacts Us</p></a>
+                  <p class="mt-3 cc">Call: (237) 681-812-255 
+                  <br>Email: fildineesoe@gmail.com 
+                  <br>Address: 0123 Some place Some country
+                  <br></p> 
+              </div>
+              <div class="col-lg-4 col-md-5  mt-1">
+                <a href=""  style="font-size: 18px; " class="fw-bold text-decoration-none text-white "><p >Newsletter</p></a>
+                <form action="/action_page.php">
+                  <input type="email" class="form-control fornn" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Email address">
+                  <!-- <img src="./img/letter.svg " class="nav-icon"><div id="emailHelp" class="form-text"></div> -->
+              </form>
+              </div>
+              <div class="row">
+                  <div class="bru ms-3 border-bottom border-2 border-white justify-content-center">
+              </div>
+                <div class="row just pb-4">
+                  <div class="col-lg-8 col-md-8 col-12 pt-2 col justify-content-end">
+                    <p class="pt-5 cc">&copy; 2021 Hospital’s name All Rights Reserved by PNTEC-LTD</p>
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-12 pt-5 men">
+                    <div class="row">
+                      <img src="./img/linkinin.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
+                      <img src="./img/fb.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
+                      <img src="./img/insta.svg" alt="" class="icn img-fluid  py-2 " style="width:3rem">
                     </div>
                   </div>
                 </div>
